tests/fixtures/invalid/str_bitnot.py
# Cannot use bitwise NOT on Str
x: str = "hello"
y: int = ~x
